fix: change scrollbar rule

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,28 +163,32 @@ body::before {
 }
 
 main {
+  overflow: hidden;
+}
+
+body {
   --sb-track-color: #232E33;
   --sb-thumb-color: #5e6a8e;
   --sb-size: 5px;
 }
 
-main::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: var(--sb-size)
 }
 
-main::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
   border-radius: 10px;
 }
 
-main::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
   border-radius: 10px;
   
 }
 
 @supports not selector(::-webkit-scrollbar) {
-  main {
+  body {
     scrollbar-color: var(--sb-thumb-color)
                      var(--sb-track-color);
   }
